# AI_agent

./: .gitignore  config.example.yaml  pyproject.toml
Data_Management/: .gitignore  CLAUDE.md  README.md  lab_context.example.yaml  pyproject.toml
Data_Management/src/dm_agent/: __main__.py  agent_loop.py  claude_client.py  db.py  mcp_server.py  orchestrator.py  tool_registry.py
Data_Management/src/dm_agent/skills/: __init__.py  data_cataloger.py  dataset_organizer.py  deleter.py  lab_overview.py  quota_monitor.py  reporter.py
Data_Management/tests/: conftest.py  test_config.py  test_data_cataloger.py  test_db.py
slurm/: agent_job.sbatch  scrontab.example  submit_weekly.sh
src/dm_agent/: __init__.py  __main__.py  base_skill.py  claude_client.py  config.py  db.py
src/dm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dm_agent/skills/: analyzer.py  confirmer.py  data_cataloger.py  readme_generator.py  reporter.py  scanner.py
tests/: test_permissions.py  test_scanner.py  test_skills_discovery.py
