[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dm-agent"
version = "0.1.0"
description = "HPC Data Management Agent - automated scanning, analysis, and cleanup"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "h5py>=3.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.39.0",
]
api = [
    "anthropic>=0.39.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
dm-agent = "dm_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
